--- a/REACT/05_React-Sass-Project-Horoscope/src/components/header/Header.scss
+++ b/REACT/05_React-Sass-Project-Horoscope/src/components/header/Header.scss
@@ -32,3 +32,15 @@
 }
 
 
+@include media-xsm {
+    .container-header h1{
+        font-size: 36px;
+    }
+}
+
+@include media-lg {
+    .container-header h1{
+        font-size: 46px;
+    }
+}
+
