--- a/REACT/05_React-Sass-Project-Horoscope/src/components/main/Main.scss
+++ b/REACT/05_React-Sass-Project-Horoscope/src/components/main/Main.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 .container-main{
     //! Bu kullanimda Responsive cok zor
     // display: grid;
@@ -34,6 +34,10 @@
             
         }
 
+        &:hover h4{
+            transform: translateY(-700%);
+        }
+
         h2{
             position: absolute;
             background-color: rgba(0, 0, 0, 0.555);
@@ -47,16 +51,16 @@
 
         h4{
             position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translateX(-50%) translateY(-50%);
+            left: 58%;
+            top: 75%;
+            // transform: translateX(-50%) translateY(-50%); //! eger tam ortalamak istersem bu lazim 
             margin: 0;
             background-color: rgba(0, 0, 0, 0.555);
             color: rgb(182, 165, 165);
             padding: 8px;
             border-radius: 15px;
             z-index: 2;
-           
+            transition: transform 0.8s ease-out;
         }
 
         img{
@@ -72,14 +76,14 @@
             width: 500px;
             position: absolute;
             margin-top: 0;
-            font-size: 24px;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 28px;
+            font-family: 'Courgette', cursive;            
             transition: opacity 0.5s, transform 1s;
             overflow-y: hidden;
             background-color:rgba(0, 0, 0, 0.521) ;
             color: whitesmoke;
             text-align: justify;
-            padding: 3px;
+            padding: 10px;
             z-index: 3;
             max-height: 60%;      //! bunu verince sagda scrollbar cikiyor.
             // overflow: auto;
