--- a/REACT/05_React-Sass-Project-Horoscope/src/components/main/Main.scss
+++ b/REACT/05_React-Sass-Project-Horoscope/src/components/main/Main.scss
@@ -51,7 +51,7 @@
 
         h4{
             position: absolute;
-            left: 58%;
+            right: 1%;
             top: 75%;
             // transform: translateX(-50%) translateY(-50%); //! eger tam ortalamak istersem bu lazim 
             margin: 0;
